# Helios

./: .env.beta.example  .env.e2e.example  .env.example  .env.staging.example  .gitignore  .mailmap  AGENTS.md  README.md  bunfig.toml  docker-compose.dev.yml  docker-compose.test.yml  eslint.config.js  package.json  playwright.config.ts  render.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  cors_policy.py  deployment_validation.py  main.py  models.py  models_auth.py  models_identity.py  models_otel.py  otel_genai_attributes.py  schemas.py  schemas_analysis.py  schemas_dashboard.py  schemas_project_analysis.py  schemas_project_keys.py  schemas_user.py  schemas_v2.py  seed.py
backend/tests/: analyst_fixtures.py  conftest.py  helpers.py  narrative_helpers.py  otlp_helpers.py  project_analysis_helpers.py  test_analyst_evidence.py  test_analyst_hierarchy.py  test_analyst_narrative_serializer.py  test_analyst_narrative_service.py  test_analyst_narrative_validation.py  test_analyst_redaction.py  test_analyst_rules.py  test_analyst_runner.py  test_api_key_admin.py  test_api_keys.py  test_auth.py  test_auth_reason_codes.py  test_cors_policy.py  test_dashboard_v2.py  test_deployment_check.py  test_deployment_validation.py  test_e2e_seam.py  test_health.py  test_identity_bootstrap.py  test_legacy_demo_gating.py  (+16 more)
diagrams/: component.md  deployment.md  production-deployment.md  trace-lifecycle.md
docs/: ADR_001_OTLP_TRACE_FOUNDATION.md  ADR_002_PROJECT_API_KEYS.md  ADR_003_PYTHON_OTEL_SDK.md  ADR_004_WORKOS_HUMAN_AUTH.md  ADR_005_OPTIONAL_ANALYST_NARRATIVE.md  ANALYST_EVIDENCE_ENGINE.md  ARCHITECTURE.md  BACKEND_PLAN.md  BROWSER_E2E_RELEASE_GATE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT_ENVIRONMENT_MATRIX.md  FREE_BETA_DEPLOYMENT.md  FRONTEND_BACKEND_INTEGRATION.md  PRODUCT_SPEC.md  PROJECT_IMPROVEMENTS.md  PROJECT_INSIGHTS.md  RELEASE_CANDIDATE_AUDIT.md  RELEASE_READINESS.md  SDK_INGESTION.md  SELF_SERVICE_ONBOARDING.md  STAGING_DEPLOYMENT.md  TYPESCRIPT_SDK.md
e2e/: 00-auth-seam.spec.ts  01-canonical-journey.spec.ts  02-isolation.spec.ts  03-responsive.spec.ts
screenshots/: README.md
scripts/: check-deployment-contract.sh  check-free-beta-config.sh  run-e2e.sh  scan-browser-bundle.sh  smoke-staging.sh
sdk/python/: README.md  pyproject.toml
sdk/python/helios_sdk/: __init__.py  client.py  config.py  errors.py  models.py  runtime.py  semconv.py  timing.py
sdk/python/tests/: conftest.py  test_client_submit.py  test_config.py  test_openai_instrumentation.py  test_runtime.py  test_trace_builder.py
src/: routeTree.gen.ts  start.ts  styles.css
(+222 files in other folders)
