[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "helios-sdk"
version = "0.1.0"
description = "Lightweight Python client for submitting traces to Helios"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["helios_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
